<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">David A. Levi</string>
    <string name="nav_header_subtitle">gDavidLevy@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="empty">empty</string>
    <string name="item">item</string>
    <string name="country">Country</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="sessionSettings">Settings</string>
    <string name="username">User Name</string>
    <string name="e_mail">simple@mail.sd</string>
    <string name="save">Save</string>
    <string name="history_city">History</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="history">History of temperature:</string>
    <string name="todo">TODO</string>
    <string name="_18">+18</string>
    <string name="delimiter">,</string>
    <string name="your_name">Your name</string>
    <string name="your_e_mail">Your e-mail</string>
    <string name="regex_check_username">^[A-Z][a-z]+\\s[A-Z][a-z]+$</string>
    <string name="regex_check_email">^[\\w-_\\.+]*[\\w-_\\.]\\@([\\w]+\\.)+[\\w]+[\\w]$</string>
    <string name="not_username">This is not a username.\nSimple: Name Family</string>
    <string name="not_email">This is not an e-mail</string>
    <string name="add_city">Add city</string>
    <string name="find">Find</string>
    <string name="name_of_city">Name of city</string>
    <string name="pbt">POSITIVE_BUTTON_TEXT</string>
    <string name="input_city">Input city</string>
    <string name="make_screenshot">Make screenshot</string>
    <string name="send_to">Send to</string>
    <string name="feedback">Freedback</string>
    <string name="humidityPhone">Humidity phone:</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="events">Events</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="datetime">Date and time</string>
    <string name="points">...</string>
    <string name="description">Description</string>
    <string name="alert_title_add">Add</string>
    <string name="alert_title_edit">Edit</string>
    <string name="alert_cancel">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="password">Password</string>
    <string name="sessionRegistration">Registration</string>
    <string name="registration">Registration</string>
    <string name="phone">Phone</string>
    <string name="phone_simple">+7 555 555-55-55</string>
    <string name="done">Done</string>
    <string name="sessionConfirmation">Confirmation</string>
    <string name="sms_code">SMS code</string>
    <string name="zeros">00000</string>
    <string name="here">Here</string>
    <string name="string_delimitter">|</string>
    <string name="aboutme">Geek UniversityAndroid\n2 семестр\nAndroid. Продвинутый уровень\nДавид А. Леви\nавгуст 2018</string>
    <string name="citi">city</string>
</resources>
