<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registration"
            android:enabled="true"
            android:icon="@drawable/ic_menu_registration"
            android:title="@string/registration" />
        <item
            android:id="@+id/nav_here"
            android:enabled="true"
            android:icon="@drawable/ic_menu_here"
            android:title="@string/here" />
        <item
            android:id="@+id/nav_add_city"
            android:enabled="true"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_city" />
        <item
            android:id="@+id/nav_history_city"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/history_city" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/about" />
    </group>
</menu>
